* Converted t/05hash.t to Test::More and modernised it.
* Converted t/06oo.t to Test::More and modernised it.
* Testing: extracted t/lib/Config/IniFiles/TestPaths.pm.

Version 2.54:   ( Wed Nov 18 12:00:44 IST 2009 )
------------------------------------------------

* Adapted t/25line-endings.t to perl-5.6.x .
    - http://www.nntp.perl.org/group/perl.cpan.testers/2009/11/msg6026936.html
    - Failure there.
    - did that by replacing open ">:raw" with "binmode()".

Version 2.53:   ( Fri Nov 13 11:52:40 IST 2009 )
------------------------------------------------

* Converted t/01basic.t to Test::More and modernised it.
* Converted t/02weird.t to Test::More and modernised it.
* Converted t/04import.t to Test::More and modernised it.
* Applied a patch from Steffen Heinrich (SHE) for:
    - https://rt.cpan.org/Ticket/Display.html?id=51445
    - included t/25line-endings.t
        - modified a little.

Version 2.52:   ( Sun Jun 28 16:16:09 IDT 2009 )
------------------------------------------------

* Added more keys to Build.PL (author, etc.)
* Added resources and keywords to META.yml.
* Converted t/00load.t to Test-More.
* No longer chdir()-ing into "t" in t/00load.t
* Got rid of the "new Config::IniFiles" syntax in the tests.
- replaced with Config::IniFiles->new().
- see "Perl Best Practices", "Programming Perl", 3rd Edition

Version 2.51:   ( Mon Jun  8 12:38:50 IDT 2009 )
------------------------------------------------

* Fixed "#46721: $config->exists() does not pay attention to -nocase => 1"
- https://rt.cpan.org/Ticket/Display.html?id=46721

Version 2.50:   ( Sun May 31 14:54:14 IDT 2009 )
------------------------------------------------

* Fixed the POD for SetParameterEOT:
- https://rt.cpan.org/Ticket/Display.html?id=28375
* Added t/pod.t and t/pod-coverage.t and fixed the problems they pointed:
- Removed some trailing pod.
    - http://rt.cpan.org/Ticket/Display.html?id=46549
- Documented the ->OutputConfig() method.
